k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sdls
  labels:
    app.kubernetes.io/part-of: sdls
