k8s/base/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: sdls

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dashboard

  template:
    metadata:
      labels:
        app: dashboard

    spec:
      containers:
        - name: dashboard
          image: dashboard:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: sdls

spec:
  selector:
    app: dashboard

  ports:
    - port: 5006
      targetPort: 5006

  type: ClusterIP
